Jumplink issue on hp

--- a/docs/css/about.css
+++ b/docs/css/about.css
@@ -5,8 +5,8 @@ html {
 
 body {
     padding: 0;
+    margin: 0;
     background: #f2f6e9;
-    margin-top: 4rem;
 }
 
 .navbar {
